# crewai-docker

./: README.md  async_crew.py  docker-compose.yml  dockerfile
maths_crew/: README.md  dockerfile  pyproject.toml
maths_crew/src/maths_crew/: crew.py  main.py
writting_crew/: README.md  pyproject.toml
writting_crew/src/writting_crew/: crew.py  main.py
writting_crew/src/writting_crew/config/: agents.yaml  tasks.yaml
