[project]
name = "maths_crew"
version = "0.1.0"
description = "maths_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.74.2,<1.0.0"
]

[project.scripts]
maths_crew = "maths_crew.main:run"
run_crew = "maths_crew.main:run"
train = "maths_crew.main:train"
replay = "maths_crew.main:replay"
test = "maths_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
