[project]
name = "writting_crew"
version = "0.1.0"
description = "writting_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.74.2,<1.0.0"
]

[project.scripts]
writting_crew = "writting_crew.main:run"
run_crew = "writting_crew.main:run"
train = "writting_crew.main:train"
replay = "writting_crew.main:replay"
test = "writting_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
